Add auto-set buttons

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <title>Storypath NPC Assistant</title>
     <h1 style="text-align: center">Storypath NPC Assistant</h1>
     <h2 style="text-align: center">By Emily Brumfield</h2>
-    <p>(This is a fan-made writing utility unaffiliated with Onyx Path.)</p>
-
   </head>
 
   <body>
     <main>
       <p class="instructions">Instructions: Fill out the form, using the tab key to navigate to the next entry or shift-tab to go back.
-        Hit the button, copy/paste the text below into your document. Asterisks convert to Storypath dot symbols.</p>
+        Hit the button, copy/paste the text below into your document. Asterisks convert to Storypath dot symbols. This is an unlicensed fan app for personal use only.</p>
       <br />
       <div class="splitter">
         <div id="app"></div>
